Die Finale Variable XP_TITLE_TEXT wurde auskommentiert